--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "lipon roy project using react node mongodb",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+     "start": "node index.js",
+     "start-dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+   
   },
   "author": "Lipon Roy",
   "license": "ISC",
